# mokhles-group-hr-analytics-bd-fy2025

./: .editorconfig  .gitattributes  .gitignore  00_dim_date.m  00_dim_location.m  01_Mokhles_Group_Headcount_Analytics_Report_FY2025.xlsx  06_Mokhles_Group_Turnover_Retention_Analytics_Report_FY2025.xlsx  07_EXCEL_POWER_QUERY_GUIDE.md  08_Diversity_Inclusion_Master_FY2025.csv  08_Mokhles_Group_Diversity_Inclusion_Analytics_Report_FY2025.xlsx  09_fact_training_development_fy2025.m  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_INFORMATION_COMPLETE.md  LICENSE  LICENSE-CODE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.1.0.md  SECURITY.md  dataset-metadata.json  platform_readiness_matrix.csv  project-metadata.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
04_EXCEL_ANALYTICS/: Mokhles_Group_Excel_Analytics_Starter_v2_3_0.xlsx
05_LOOKER_STUDIO/: README_LOOKER_STUDIO.md
06_TABLEAU/: README_TABLEAU.md
10_DOCUMENTATION/: CURRENT_OFFICIAL_REFERENCES.md  PYTHON_TO_POWER_BI_WORKFLOW.md
11_KAGGLE_METADATA/: file-manifest.json
bi_assets/: README.md
data/: README.md
docs/: DATASET_CARD.md  DATASET_USAGE_GUIDE.md  GITHUB_ABOUT.md  GITHUB_UPLOAD_GUIDE.md  REPOSITORY_STRUCTURE.md  SECURITY_AUDIT_2026-07-24.md
examples/: quick_start.py
metadata/: README.md  column-metadata-coverage.json  github-repository-manifest.json  github-repository-settings.json  kaggle-dataset-metadata.json  kaggle-kernel-metadata.json  project-metadata.json  source-file-manifest.json
notebooks/: README.md  (+1 more)
(+50 files in other folders)
