[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mokhles-hr-analytics"
version = "2.0.0"
description = "Utilities for the Mokhles Group synthetic Bangladesh HR analytics portfolio."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Siam Ahmad Musa"}
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "openpyxl>=3.1.5",
  "jupyterlab>=4.0",
  "nbformat>=5.10"
]

[project.urls]
Repository = "https://github.com/samusa099/mokhles-group-hr-analytics-bd-fy2025"
Kaggle = "https://www.kaggle.com/datasets/samusahr/mokhles-group-hr-analytics-portfolio-bd-fy2025"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
